# SNNExperimentFramework

./: .gitattributes  .gitignore  README.md  TODO.md
SNN/: .coveragerc  .pylintrc  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
SNN/SNN2/: .main.py@neomake_3836964_125.py  .main.py@neomake_7835_2.py  __init__.py  main.py
SNN/bash/: CoNEXT_plot.sh  CoNEXT_plot_umap.sh  all_centroids.sh  apply_trnfrz.sh  centroids.sh  concatenate_merged.sh  copy.sh  duplicate.sh  execute-17-02.sh  execute-24-02.sh  execute-30-01.sh  execute-CoNEXT.sh  execute-DarioTests.sh  execute-appleLike.sh  execute-bunny-06-04.sh  execute-likeApple.sh  execute_ATELIER.sh  execute_multiple_conf.sh  execute_nfv-sdn.sh  generate_conf.sh  generate_penetration_confs.sh  generate_vmaf_confs.sh  merge-NFV-SDN.sh  merge.sh  merge_and_plot.sh  merge_generic-evaluation.sh  merge_gray_stats.sh  merge_ott_stats.sh  merge_reinforce_stats.sh  merge_vmaf_comparison.sh  multiExp_umap.sh  multiple_rl.sh  new_conf_file.sh  plot_emb.sh  plot_merged.sh  plot_rl.sh  reRun_same_hash.sh  reRun_same_hash_reinforcement.sh  study_difficult_margin.sh  test_multiple_conf.sh  (+1 more)
SNN/py/: .CorrMatrixTmp.py@neomake_1452609_3556.py  .reinforcementStudy.py@neomake_2995084_141.py  CorrMatrixTmp.py  MultiExp_reinforceStudy.py  RL_apply_trnfrz.py  all.sh  centroidPlot.py  centroidsStudy.py  cm.py  embeddingTSNE.py  evolution_apply_cycles.py  grayComparison.py  grayPredEvaluation.py  nfv-sdn-plot.py  nfv-sdn-plot_matrix.py  performanceOnMarginVariation.py  plot.py  reinforcementActionStudy.py  reinforcementStudy.py  (+4 more)
(+4721 files in other folders)
