# © 2024 Nokia
# Licensed under the BSD 3 Clause license
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SNN"
version = "3.0.1"
authors = [
  { name="Mattia Milani", email="mattia.milani@nokia.com" },
]
maintainers = [
  {name = "Mattia Milani", email = "mattia.milani@nokia.com"}
]
description = "Siamese Neural Network self learning FrameWork"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages]
find = {exclude = ["SNN.tests*", "ez_setup"]}

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock"
]
setup = [
    "pytest-runner"
]

[project.scripts]
snn = "SNN2.main:main"
